runFormatTest(import.meta, ["angular"], { trailingComma: "none" });
runFormatTest(import.meta, ["angular"], { trailingComma: "es5" });
runFormatTest(import.meta, ["angular"], { trailingComma: "all" });
